# FaceOps-Attendance

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: conda-test.yml  frontend-docker.yml  retrain-models.yml  run-docker.yml
anti_spoofing_module_MobileNetV2/: anti_spoofing_mobileNet.ipynb
anti_spoofing_module_MobileNetV2/Bens_Innovative_Feature/: grad_cam.ipynb
backend/: .dockerignore  requirements.txt  test_face_detection.py
backend/API_endpoint_test/API_endpoint_unit_test/: conftest.py  health_unit_tests.py
backend/app/: config.py  main.py
backend/app/api/: routes_verification.py
backend/app/configs/: config.yaml
backend/app/database/: __init__.py  database.py
backend/app/logging/: __init__.py  logger.py
backend/app/services/: emotion_service.py  face_detection_service.py  inference_service.py  vector_store_service.py  verification_service.py
backend/captures/: capture_service.py  merge_captures.py
backend/scripts/: merge_captures.py  merge_config.yaml
frontend/: README.md  index.html  package-lock.json
frontend/src/: App.jsx
frontend/src/components/: CameraView.jsx  DiagnosticsView.jsx  Icons.jsx  RegistrationView.jsx  TopBar.jsx
frontend/src/services/: api.js
frontend/src/styles/: global.css  tokens.css
frontend/src/utils/: drawing.js
training_module/anti_spoofing_module_MobileNetV2/: anti_spoofing.py
training_module/emotion_module/affectnet/: train.py
training_module/face_recognition_module/: train_triplet.py
training_module/face_recognition_module/resnet18_training/: README.md  (+7 more)
(+2 files in other folders)
